Added SerieList to frontend
