# app/ErtsWebApp/Controllers/Lol/TournamentController.cs
@@ -3,33 +3,27 @@ using ErtsApplication.DTO;
 using Microsoft.AspNetCore.Mvc;
 using System.Collections.Generic;
 
-namespace ErtsWebApp.Controllers.Lol
-{
+namespace ErtsWebApp.Controllers.Lol {
     [Route("api/[controller]")]
     [ApiController]
-    public class TournamentController : ControllerBase
-    {
+    public class TournamentController : ControllerBase {
         private readonly ITournamentDbService _dbService;
-        public TournamentController(ITournamentDbService dbService)
-        {
+        public TournamentController(ITournamentDbService dbService) {
             _dbService = dbService;
         }
-        [Route("[action]/{leagueId}")]
+        [Route("[action]/{serieId}")]
         [HttpGet]
-        public ActionResult<IEnumerable<TournamentShortDto>> GetTournamentsShort(int leagueId)
-        {
-            return _dbService.GetTournamentsShort(leagueId);
+        public ActionResult<IEnumerable<TournamentShortDto>> GetTournamentsShort(int serieId) {
+            return _dbService.GetTournamentsShort(serieId);
         }
         [Route("[action]/{tournamentId}")]
         [HttpGet]
-        public ActionResult<IEnumerable<TournamentTeamShortDto>> GetTournamentTeamsShort(int tournamentId)
-        {
+        public ActionResult<IEnumerable<TournamentTeamShortDto>> GetTournamentTeamsShort(int tournamentId) {
             return _dbService.GetTournamentTeamsShort(tournamentId);
         }
         [Route("[action]/{tournamentId}")]
         [HttpGet]
-        public ActionResult<IEnumerable<LolTournamentPlayerStatsDto>> GetLolTournamentPlayerStats(int tournamentId)
-        {
+        public ActionResult<IEnumerable<LolTournamentPlayerStatsDto>> GetLolTournamentPlayerStats(int tournamentId) {
             return _dbService.GetLolTournamentPlayerStats(tournamentId);
         }
     }
