# app/ErtsWebApp/swagger.json
@@ -188,7 +188,43 @@
         }
       }
     },
-    "/api/Tournament/GetTournamentsShort/{leagueId}": {
+    "/api/Serie/GetSeriesShort/{leagueId}": {
+      "get": {
+        "tags": [
+          "Serie"
+        ],
+        "operationId": "Serie_GetSeriesShort",
+        "parameters": [
+          {
+            "name": "leagueId",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int32"
+            },
+            "x-position": 1
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "nullable": true,
+                  "items": {
+                    "$ref": "#/components/schemas/SerieShortDto"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/api/Tournament/GetTournamentsShort/{serieId}": {
       "get": {
         "tags": [
           "Tournament"
@@ -196,7 +232,7 @@
         "operationId": "Tournament_GetTournamentsShort",
         "parameters": [
           {
-            "name": "leagueId",
+            "name": "serieId",
             "in": "path",
             "required": true,
             "schema": {
@@ -655,6 +691,30 @@
             "items": {
               "$ref": "#/components/schemas/LolGamePlayerShortStatsDto"
             }
+          }
+        }
+      },
+      "SerieShortDto": {
+        "type": "object",
+        "additionalProperties": false,
+        "properties": {
+          "id": {
+            "type": "integer",
+            "format": "int64"
+          },
+          "name": {
+            "type": "string",
+            "nullable": true
+          },
+          "startTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
+          },
+          "endTime": {
+            "type": "string",
+            "format": "date-time",
+            "nullable": true
           }
         }
       },
